# Internship

./: README.md
project/: CMakeLists.txt
project/program1/: CMakeLists.txt
project/program1/src/: Handler.cpp  Handler.h  SaveBuffer.h  Server.cpp  Server.h  main.cpp
project/program2/: CMakeLists.txt
project/program2/src/: Client.cpp  Client.h  main.cpp  rcvHandler.cpp  rcvHandler.h
